--- a/react-webgame-master/1.구구단/like-button.html
+++ b/react-webgame-master/1.구구단/like-button.html
@@ -5,9 +5,8 @@
 <div id="root"></div>
 <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-<!--<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>-->
-<!--<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>-->
-<script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+<script type="text/babel">
   'use strict';
 
   class LikeButton extends React.Component{
@@ -20,13 +19,13 @@
           return "You liked this";
         }
 
-        return React.createElement('button', {onClick:()=> this.setState({liked:true})},'Like');
+        return <button type="submit" onClick={()=> { this.setState({ liked: true })}}>Like</button>;
       }
   }
 
 </script>
-<script>
-  ReactDOM.render(React.createElement(LikeButton), document.querySelector('#root'));
+<script type="text/babel">
+  ReactDOM.render(<Button />, document.querySelector('#root'));
 </script>
 </body>
 </html>
